<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:padding="20dp"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/iconPhrase_night"
        android:layout_width="243dp"
        android:layout_height="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textColor="@color/colorNightText"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/link_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/night_linearLayout" />

    <TextView
        android:id="@+id/iconPhrase_day"
        android:layout_width="243dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="3dp"
        android:layout_weight="1"
        android:text="TextView"
        android:textSize="20dp"
        android:textColor="@color/dayTransparent"
        app:layout_constraintBottom_toTopOf="@+id/night_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_linearLayout4" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/day_linearLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="107dp" />

        <TextView
            android:id="@+id/tvHighTemperature"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="20"
            android:textColor="@color/colorRed"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/slash"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvLowTemperature"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="15"
            android:textColor="@color/colorBlue"
            android:textSize="30sp" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="37dp"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:outlineSpotShadowColor="@color/colorheadText"
            app:srcCompat="@drawable/celsius_icon" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/day_linearLayout4"
        android:layout_width="345dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/iconPhrase_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView

            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@color/dayTransparent"
            android:text="@string/day"
            android:textColor="@color/colorWhite"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:orientation="vertical"
            android:layout_marginTop="-10dp">

            <ImageView
                android:id="@+id/icon_day"
                android:layout_width="89dp"
                android:layout_height="99dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/btn_dialog" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/night_linearLayout"
        android:layout_width="345dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/iconPhrase_night"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconPhrase_day">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/nightTransparent"
            android:text="@string/night"
            android:textColor="@color/colorWhite"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_night"
                android:layout_width="89dp"
                android:layout_height="99dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="-10dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/btn_dialog" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/link_linearLayout"
        android:layout_width="326dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="80dp"
        android:background="@color/Transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconPhrase_night">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http"
            android:textColor="@color/colorWhite"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="192dp"
        android:layout_marginLeft="192dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:text="@string/date"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>